# 3drenderer

./: CMakeLists.txt  Makefile
src/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Framebuffer.cpp  Framebuffer.h  Light.cpp  Light.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h  array.c  camera.c  camera.cpp  camera.h  clipping.c  clipping.cpp  clipping.h  display.c  display.h  light.c  light.cpp  light.h  main.c  main.cpp  matrix.c  matrix.cpp  matrix.h  mesh.c  mesh.cpp  mesh.h  options.c  options.h  swap.c  texture.c  texture.cpp  texture.h  triangle.c  triangle.cpp  (+5 more)
